--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "cloudinary": "^2.2.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
@@ -21,7 +22,8 @@
         "jsonwebtoken": "^9.0.2",
         "lodash": "^4.17.21",
         "mongodb": "^6.7.0",
-        "mongoose": "^8.4.1"
+        "mongoose": "^8.4.1",
+        "multer": "^1.4.5-lts.1"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
@@ -30,6 +32,7 @@
         "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/lodash": "^4.17.5",
+        "@types/multer": "^1.4.11",
         "@types/node": "^20.14.2",
         "nodemon": "^3.1.3",
         "prettier": "3.3.1",
