--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
         "@types/lodash": "^4.17.5",
         "@types/multer": "^1.4.11",
         "@types/node": "^20.14.2",
+        "cross-env": "^7.0.3",
         "nodemon": "^3.1.3",
         "prettier": "3.3.1",
         "ts-node": "^10.9.2",
