--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,8 @@
         "lodash": "^4.17.21",
         "mongodb": "^6.7.0",
         "mongoose": "^8.4.1",
-        "multer": "^1.4.5-lts.1"
+        "multer": "^1.4.5-lts.1",
+        "stripe": "^15.12.0"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
