--- a/backend/package.json
+++ b/backend/package.json
@@ -2,12 +2,11 @@
     "name": "backend",
     "version": "1.0.0",
     "description": "",
-    "main": "./src/index.ts",
+    "main": "./src/server.ts",
     "scripts": {
         "dev": "nodemon",
         "build": "npm install && npx tsc",
-        "start": "node ./dist/index.js",
-        "e2e": "cross-env DOTENV_CONFIG_PATH=.env.e2e nodemon"
+        "start": "node ./dist/index.js"
     },
     "author": "",
     "license": "ISC",
@@ -37,7 +36,7 @@
         "@types/node": "^20.14.2",
         "cross-env": "^7.0.3",
         "nodemon": "^3.1.3",
-        "prettier": "3.3.1",
+        "prettier": "^3.3.2",
         "ts-node": "^10.9.2",
         "typescript": "^5.4.5"
     }
