--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,14 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@radix-ui/react-slot": "^1.1.0",
         "@stripe/react-stripe-js": "^2.7.1",
         "@stripe/stripe-js": "^3.5.0",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "date-fns": "^3.6.0",
+        "embla-carousel-react": "^8.1.6",
+        "lucide-react": "^0.408.0",
         "react": "^18.2.0",
         "react-datepicker": "^7.0.0",
         "react-dom": "^18.2.0",
@@ -19,10 +25,13 @@
         "react-icons": "^5.2.1",
         "react-query": "^3.39.3",
         "react-router-dom": "^6.23.1",
-        "react-toastify": "^10.0.5"
+        "react-toastify": "^10.0.5",
+        "shadcn-ui": "^0.8.0",
+        "tailwind-merge": "^2.4.0",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
-        "@types/node": "^20.14.2",
+        "@types/node": "^20.14.11",
         "@types/react": "^18.2.66",
         "@types/react-datepicker": "^6.2.0",
         "@types/react-dom": "^18.2.22",
