--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,10 @@
         "date-fns": "^3.6.0",
         "embla-carousel-react": "^8.1.6",
         "lucide-react": "^0.408.0",
-        "react": "^18.2.0",
+        "next": "^14.2.5",
+        "react": "^18.3.1",
         "react-datepicker": "^7.0.0",
-        "react-dom": "^18.2.0",
+        "react-dom": "^18.3.1",
         "react-hook-form": "^7.51.5",
         "react-icons": "^5.2.1",
         "react-query": "^3.39.3",
