--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,8 +26,10 @@
         "react-icons": "^5.2.1",
         "react-query": "^3.39.3",
         "react-router-dom": "^6.23.1",
+        "react-slick": "^0.30.2",
         "react-toastify": "^10.0.5",
         "shadcn-ui": "^0.8.0",
+        "slick-carousel": "^1.8.1",
         "tailwind-merge": "^2.4.0",
         "tailwindcss-animate": "^1.0.7"
     },
@@ -37,6 +39,7 @@
         "@types/react-datepicker": "^6.2.0",
         "@types/react-dom": "^18.2.22",
         "@types/react-router-dom": "^5.3.3",
+        "@types/react-slick": "^0.23.13",
         "@typescript-eslint/eslint-plugin": "^7.2.0",
         "@typescript-eslint/parser": "^7.2.0",
         "@vitejs/plugin-react-swc": "^3.5.0",
